
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in6 {scalar_t__ sin6_scope_id; scalar_t__ sin6_flowinfo; int sin6_addr; int sin6_port; int sin6_family; } ;


 int AF_INET6 ;
 int IPPROTO_IP ;
 int IPPROTO_IPV6 ;
 int IPV6_RECVPKTINFO ;
 int PF_INET6 ;
 int SHUT_RDWR ;
 int SOCK_DCCP ;
 int bind (int,struct sockaddr_in6*,int) ;
 int close (int) ;
 int connect (int,struct sockaddr_in6*,int) ;
 int htons (int) ;
 int inet_pton (int ,char*,int *) ;
 int listen (int,int) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int shutdown (int,int ) ;
 int socket (int ,int ,int ) ;

int main() {
 struct sockaddr_in6 sa1;
 sa1.sin6_family = AF_INET6;
 sa1.sin6_port = htons(20002);
 inet_pton(AF_INET6, "::1", &sa1.sin6_addr);
 sa1.sin6_flowinfo = 0;
 sa1.sin6_scope_id = 0;

 int optval = 8;

 int s1 = socket(PF_INET6, SOCK_DCCP, IPPROTO_IP);
 bind(s1, &sa1, 0x20);
 listen(s1, 0x9);

 setsockopt(s1, IPPROTO_IPV6, IPV6_RECVPKTINFO, &optval, 4);

 int s2 = socket(PF_INET6, SOCK_DCCP, IPPROTO_IP);
 connect(s2, &sa1, 0x20);

 shutdown(s1, SHUT_RDWR);
 close(s1);
 shutdown(s2, SHUT_RDWR);
 close(s2);

 return 0;
}
